# code-landscrap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  dependency-review.yml
docs/: index.html
docs/artifacts/d77eae0ecb27/: artifact.html  artifact.json  artifact.md
src/code_landscrap/: __init__.py  __main__.py  cli.py  generator.py  miner.py  models.py  prompting.py  renderer.py  repo_source.py  selector.py  store.py
src/code_landscrap/templates/: artifact.css  artifact.html  artifact.js
tests/: conftest.py  test_generator.py  test_miner.py  test_prompting.py  test_renderer.py  test_repo_source.py  test_selector.py  test_store.py
